--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -391,7 +391,7 @@ input[readonly] {
 
 
 /*
- * SERVICES AND ProfessionalS TABS
+ * SERVICES AND PROFESSIONALS TABS
  */
 
 .serviceandprofessional {
@@ -470,7 +470,59 @@ input[readonly] {
  * Professional Details
  */
 
-.prof-details,
+.item-icon-left.item-input {
+  padding: 0 16px 0 54px !important;
+  input {
+    padding-right: 0;
+    border-bottom: 1px solid $calm;
+  }
+  .button.icon {
+    position: relative;
+  }
+}
+
+.contacts {
+  .item {
+    border: none;
+  }
+  .list {
+    margin-bottom: 0;
+    padding: 0;
+  }
+}
+
+.competences {
+  margin: 10px;
+  border-top: 1px solid #ddd;
+  padding-top: 10px;
+  .title {
+    font-weight: bold;
+    padding: 10px 0;
+  }
+  .item-input-inset {
+    border: 0;
+    padding: 0;
+    input {
+      display: inline-block;
+      width: 100%;
+      border-bottom: 1px solid black;
+    }
+  }
+  .competences-tags {
+    .tag {
+      display: inline-block;
+      line-height: 28px;
+      background-color: skyblue;
+      padding: 0 7px;
+      margin: 5px;
+      border-radius: 5px;
+    }
+    .tag.editing {
+      padding-right: 0;
+    }
+  }
+}
+
 .service-details {
   .contacts,
   .details {
@@ -510,100 +562,69 @@ input[readonly] {
       .description_text {}
     }
     */
-    .competences {
-      margin: 10px;
-      border-top: 1px solid #ddd;
-      padding-top: 10px;
-      .title {
-        font-weight: bold;
-        padding: 10px 0;
-      }
-      .item-input-inset {
+  }
+}
+
+.list-accordion {
+  .list {
+    .item-accordion {
+      border: 1px solid #ddd;
+      padding: 1px 0;
+      .item {
         border: 0;
+      }
+      .item-accordion-header {
+        white-space: normal;
+        .title {
+          text-transform: uppercase;
+        }
+        i {
+          transition: all 0.2s;
+        }
+        i.open {
+          transform: rotate(180deg);
+        }
+        i::before {
+          font-size: 0.5em;
+        }
+      }
+      .item-accordion-content {
+        transition: all 0.2s;
+        border-top: 0;
         padding: 0;
-        input {
-          display: inline-block;
-          width: 100%;
-          border-bottom: 1px solid black;
+        div {
+          white-space: normal;
+          font-size: 14px;
+        }
+        .item-select {
+          padding-left: 0;
+          .input-label {
+            width: 100%;
+            font-weight: normal;
+          }
+          .input-label.placeholder {
+            color: #aaaaaa;
+          }
         }
       }
-      .competences-tags {
-        .tag {
-          display: inline-block;
-          line-height: 28px;
-          background-color: skyblue;
-          padding: 0 7px;
-          margin: 5px;
-          border-radius: 5px;
-        }
-        .tag.editing {
-          padding-right: 0;
-        }
+      .item-accordion-content.ng-hide {
+        line-height: 0px;
+        opacity: 0;
       }
+      .item-accordion-footer {
+        padding: 16px;
+        text-align: right;
+      }
+    }
+    .item-accordion:not(:first-child) {
+      margin-top: 16px;
     }
   }
-  .prof-services {
-    .list-accordion {
-      .list {
-        .item-accordion {
-          border: 1px solid #ddd;
-          padding: 1px 0;
-          .item {
-            border: 0;
-          }
-          .item-accordion-header {
-            white-space: normal;
-            .title {
-              text-transform: uppercase;
-            }
-            i {
-              transition: all 0.2s;
-            }
-            i.open {
-              transform: rotate(180deg);
-            }
-            i::before {
-              font-size: 0.5em;
-            }
-          }
-          .item-accordion-content {
-            transition: all 0.2s;
-            border-top: 0;
-            padding: 0;
-            div {
-              white-space: normal;
-              font-size: 14px;
-            }
-            .item-select {
-              padding-left: 0;
-              .input-label {
-                width: 100%;
-                font-weight: normal;
-              }
-              .input-label.placeholder {
-                color: #aaaaaa;
-              }
-            }
-          }
-          .item-accordion-content.ng-hide {
-            line-height: 0px;
-            opacity: 0;
-          }
-          .item-accordion-footer {
-            padding: 16px;
-            text-align: right;
-          }
-        }
-        .item-accordion:not(:first-child) {
-          margin-top: 16px;
-        }
-      }
-    }
-    .input-label {
-      .address {
-        font-style: italic;
-      }
-    }
+}
+
+.input-label {
+  .address {
+    font-style: italic;
   }
 }
 
@@ -651,6 +672,44 @@ placeautocomplete {
  * DETAILS
  */
 
+.card.professional {
+  box-shadow: none;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding-bottom: 10px;
+  img {
+    background-color: $stable;
+  }
+  .name {
+    font-weight: bold;
+    font-size: larger;
+    white-space: normal;
+  }
+}
+
+.profile-image-container {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  max-width: 80px;
+  max-height: 80px;
+  width: 100%;
+  height: 100%;
+  .upload {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    color: $dark;
+    background-color: $stable;
+    .icon {
+      position: absolute;
+      bottom: 0;
+      right: 5px;
+    }
+  }
+}
+
 .details {
   a,
   a:hover,
@@ -670,55 +729,19 @@ placeautocomplete {
       font-weight: bold;
     }
   }
-  .professional {
-    margin-bottom: 10px;
-    padding-bottom: 20px;
+  .card.professional {
+    margin-top: 0;
     border-bottom: 2px solid $t_blue;
-    .item {
-      margin-bottom: 20px;
-      border: none;
-      ul {
-        /*position: absolute;*/
-        /*bottom: 10px;*/
-      }
-    }
-    ul {
-      li {
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        .icon {
-          display: inline-block;
-          width: 20px;
-          margin-right: 10px;
-          font-size: 20px;
-          text-align: center;
-        }
-      }
-      .name {
-        font-weight: bold;
-        font-size: larger;
-        white-space: normal;
-      }
-      .type {
-        padding-top: 5px;
-        font-style: italic;
-        white-space: normal;
-      }
-      .address {
-        padding-top: 5px;
-      }
-      .phone {
-        padding-top: 5px;
-      }
-      .email {
-        padding-top: 5px;
-      }
+    img {
+      background-color: $stable;
     }
   }
   .info {
     .item {
       border: none;
+      .icon {
+        font-size: 26px;
+      }
     }
   }
   .state {
@@ -950,6 +973,9 @@ placeautocomplete {
   .form-container {
     padding: 10px;
     form {
+      /*
+ * Details
+ */
       text-align: left;
       .item-select {
         .input-label {
@@ -977,33 +1003,6 @@ placeautocomplete {
     border-top: 3px solid $t_blue;
     padding-top: 20px;
     font-size: larger;
-  }
-}
-
-
-/*
- * Details
- */
-
-.profile-image-container {
-  display: block;
-  .profile-image {
-    display: block;
-    /*border-radius: 8px;*/
-    height: 100px;
-    background-color: $stable;
-    position: relative;
-    .upload {
-      position: absolute;
-      bottom: 4px;
-      right: 8px;
-      font-size: 28px;
-      color: $dark;
-    }
-    img {
-      width: 100%;
-      height: auto;
-    }
   }
 }
 
