--- a/gi-pro-mobile/www/templates/serviceDetails.html
+++ b/gi-pro-mobile/www/templates/serviceDetails.html
@@ -1,15 +1,9 @@
 <ion-view view-title="{{title}}" class="service-details">
   <ion-content>
     <div class="service">
-      <div class="row">
-        <div class="col col-33">
-          <div class="profile-image-container">
-            <div class="profile-image">
-              <img ng-if="service.professional.imageUrl" ng-src="{{service.professional.imageUrl}}">
-            </div>
-          </div>
-        </div>
-        <div class="col col-67">
+      <div class="card professional">
+        <div class="item item-thumbnail-left">
+          <img ng-src="{{service.professional.imageUrl}}">
           <ul>
             <li class="name">{{service.professional.name}} {{service.professional.surname}}</li>
             <li class="toprofile"><a ng-click="openProfessionalDetails(service.professional)">{{'view_profile' | translate}}</a></li>
