New color theme, working on notifications

--- a/gi-pro-mobile/www/templates/login.html
+++ b/gi-pro-mobile/www/templates/login.html
@@ -15,7 +15,7 @@
         </label>
       </div>
       <a class="forgotpassword" ng-click="reset()">{{'password_lost' | translate}}</a>
-      <button class="button button-block button-energized" ng-click="login()">{{'login' | translate}}</button>
+      <button class="button button-block button-assertive" ng-click="login()">{{'login' | translate}}</button>
       <div class="bottom">
         {{'new_account' | translate}} <a ng-click="register()">{{'register' | translate}}</button>
     </div>
