--- a/gi-pro-mobile/www/templates/registration_step_1.html
+++ b/gi-pro-mobile/www/templates/registration_step_1.html
@@ -34,7 +34,7 @@
             <span class="error" ng-show="regform1.pw2.$error.pwmatch">{{'passwords_dont_match' | translate}}</span>
           </div>
         </div>
-        <button class="button button-block button-energized" ng-click="goToStep2()" ng-disabled="!registration.pec || regform1.$invalid">{{'registration2_button_label' | translate}}</button>
+        <button class="button button-block button-assertive" ng-click="goToStep2()" ng-disabled="!registration.pec || regform1.$invalid">{{'registration2_button_label' | translate}}</button>
       </form>
       <div class="bottom">
         <a ng-click="cancel()">{{'cancel' | translate}}</a>
