--- a/gi-pro-mobile/www/templates/tutorial.html
+++ b/gi-pro-mobile/www/templates/tutorial.html
@@ -23,7 +23,7 @@
       <!--
       <ion-slide-page>
         <div class="tutorial-content padding">
-          <button class="button button-block button-energized" ng-click="endTutorial()">{{'login_as_pro' | translate}}</button>
+          <button class="button button-block button-assertive" ng-click="endTutorial()">{{'login_as_pro' | translate}}</button>
           <button class="button button-block button-energized" ui-sref="app.serviceAndProf">{{'enter_no_login' | translate}}</button>
         </div>
       </ion-slide-page>
@@ -32,12 +32,12 @@
     <div class="tutorial-footer">
       <div class="row row-center">
         <div class="col">
-          <button class="button button-block button-energized" ng-click="endTutorial()">{{'login_as_pro' | translate}}</button>
+          <button class="button button-block button-assertive" ng-click="endTutorial()">{{'login_as_pro' | translate}}</button>
         </div>
       </div>
       <div class="row row-center">
         <div class="col">
-          <button class="button button-block button-energized" ui-sref="app.serviceAndProf">{{'enter_no_login' | translate}}</button>
+          <button class="button button-block button-assertive" ui-sref="app.serviceAndProf">{{'enter_no_login' | translate}}</button>
         </div>
       </div>
     </div>
