--- a/gi-pro-mobile/scss/ionic.app.scss
+++ b/gi-pro-mobile/scss/ionic.app.scss
@@ -18,16 +18,15 @@ $dark:                            #444 !default;
 
 /* Custom colors */
 
-$t_blue: #1f6ca5;
-$t_darkblue: #10406f;
-$t_lightblue: #1bafe6;
+$t_blue: #1786c8;
+$t_lightblue: #38a3dc;
 $t_orange: #d75719;
-$t_red: #d7193a;
+$t_red: #ea5456;
 
 /* Ionic overrides*/
 
-$calm: $t_darkblue !default;
-$energized: $t_orange !default;
+$calm: $t_lightblue !default;
+$energized: $t_red !default;
 $assertive: $t_red !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
@@ -40,40 +39,40 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 .gi-pro .ionic_datepicker_popup {
   .today {
-    border: 1px solid $t_blue;
+    border: 1px solid $calm;
     /*border-radius: 50%;*/
   }
   .selected_date {
-    background-color: $t_blue;
+    background-color: $calm;
     /*border-radius: 50%;*/
     color: #ffffff;
     /*font-weight: bold;*/
   }
   .popup-head {
-    background-color: $t_blue;
+    background-color: $calm;
     /*display: none;*/
   }
   .popup-body {
     .selected_date_full {
-      background-color: $t_blue;
+      background-color: $calm;
     }
     .month_select,
     .year_select {
       /*border: none;*/
-      border-bottom: 1px solid $t_blue;
+      border-bottom: 1px solid $calm;
       /*padding: 0;*/
     }
     .month_select:after,
     .year_select:after {
       /*right: 5px;*/
-      color: $t_blue;
+      color: $calm;
     }
     .button-clear {
-      color: $t_blue;
+      color: $calm;
     }
   }
   .popup-buttons button {
-    background-color: $t_orange;
+    background-color: $assertive;
     /*border-radius: 0;*/
     /*margin-right: 1px;*/
     color: #ffffff;
@@ -83,40 +82,40 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 .gi-pro .ionic_datepicker_modal {
   .header,
   .footer {
-    background-color: $t_blue;
+    background-color: $calm;
     .title,
     .button {
       color: #ffffff;
     }
   }
   .today {
-    border: 1px solid $t_blue;
+    border: 1px solid $calm;
   }
   .selected_date {
-    background-color: $t_blue;
+    background-color: $calm;
     color: #fff;
     /*font-weight: bold;*/
   }
   .button-clear {
-    color: $t_blue;
+    color: $calm;
   }
   .month_select,
   .year_select {
     /*border: none;*/
-    border-bottom: 1px solid $t_blue;
+    border-bottom: 1px solid $calm;
     /*padding: 0;*/
   }
   .month_select:after,
   .year_select:after {
     /*right: 5px;*/
-    color: $t_blue;
+    color: $calm;
   }
 }
 
 .gi-pro .ionic_timepicker_popup {
   .popup-body {
     .heading {
-      background-color: $t_blue;
+      background-color: $calm;
     }
     .row {
       padding: 10px 0;
@@ -133,7 +132,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   }
   .popup-buttons {
     .button {
-      background-color: $t_orange;
+      background-color: $assertive;
     }
   }
 }
@@ -224,7 +223,7 @@ input[readonly] {
       background-color: transparent;
     }
     .item.active {
-      background-color: $t_darkblue;
+      background-color: $t_lightblue;
     }
   }
 }
@@ -245,13 +244,12 @@ input[readonly] {
 .tab-item.tab-item-active,
 .tab-item.active,
 .tab-item.activated {
-  /*color: $t_lightblue !important;*/
   color: white !important;
 }
 
 .tabs-striped .tabs {
   /*border-color: transparent;*/
-  border-color: $t_darkblue;
+  border-color: $t_lightblue;
 }
 
 .tabs-top.tabs-striped .tab-item {
@@ -265,7 +263,6 @@ input[readonly] {
 .tabs-top.tabs-striped .tab-item.activated {
   margin-top: 0px;
   border-width: 0px 0px 3px 0px !important;
-  /*border-color: $t_lightblue;*/
   border-color: white;
 }
 
@@ -275,18 +272,18 @@ input[readonly] {
  */
 
 .tutorial {
-  /*background-color: $t_darkblue;*/
+  /*background-color: $t_lightblue;*/
   .title {
     height: 10%;
     color: white;
-    background-color: $t_darkblue;
+    background-color: $t_lightblue;
     /*text-transform: uppercase;*/
     text-align: center;
     font-size: 2em;
   }
   ion-slides {
     height: 60%;
-    background-color: $t_darkblue;
+    background-color: $t_lightblue;
     .tutorial-content {
       display: flex;
       flex-direction: column;
@@ -531,6 +528,9 @@ input[readonly] {
       .icon {
         font-size: 20px;
         margin-right: 10px;
+      }
+      .cost {
+        font-weight: bold;
       }
       a,
       a:link,
@@ -1012,7 +1012,7 @@ placeautocomplete {
   padding-top: 20px;
   span {
     font-weight: bold;
-    color: $t_darkblue;
+    color: $t_lightblue;
   }
 }
 */
@@ -1028,19 +1028,19 @@ placeautocomplete {
   }
   .credits_title {
     text-align: center;
-    color: $t_darkblue;
+    color: $t_lightblue;
     font-size: 24px;
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 10px;
   }
   .bg-image {
-    background-color: $t_lightblue;
+    background-color: white;
   }
   .credits_subtitle {
     margin-top: 20px !important;
     text-align: center;
-    color: $t_darkblue;
+    color: $t_lightblue;
     font-size: 18px;
     font-weight: bold;
   }
