--- a/gi-pro-mobile/www/templates/menu.html
+++ b/gi-pro-mobile/www/templates/menu.html
@@ -26,6 +26,7 @@
         </ion-item>
         <ion-item nav-clear menu-close class="item item-icon-left" ng-if="logged" ui-sref-active="active" ui-sref="app.notifications">
           <i class="icon ion-ios-bell"></i> {{'notifications' | translate}}
+          <span class="badge badge-assertive" ng-if="unreadNotifications">{{unreadNotifications}}</span>
         </ion-item>
         <ion-item nav-clear menu-close class="item item-icon-left" ng-if="logged" ui-sref-active="active" ui-sref="app.profile">
           <i class="icon ion-person"></i> {{'profile' | translate}}
