--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -42,7 +42,7 @@
           <!-- List view -->
           <div ng-if="viewAsList">
             <ion-scroll ng-style="styles.container" ng-show="servicesList && servicesList.length">
-              <ion-refresher on-refresh="loadServices()">
+              <ion-refresher on-refresh="reload()">
               </ion-refresher>
               <div class="list results-list services-list">
                 <div class="card" ng-repeat="service in servicesList">
@@ -90,7 +90,7 @@
           <!-- List view -->
           <div ng-if="viewAsList">
             <ion-scroll ng-style="styles.container" ng-show="professionalsList && professionalsList.length">
-              <ion-refresher on-refresh="loadProfessionals()">
+              <ion-refresher on-refresh="reload()">
               </ion-refresher>
               <div class="list results-list professionals-list">
                 <div class="card" ng-repeat="professional in professionalsList">
