--- a/gi-pro-mobile/www/templates/serviceDetails.html
+++ b/gi-pro-mobile/www/templates/serviceDetails.html
@@ -11,13 +11,17 @@
         </div>
       </div>
       <div class="details">
-        <div class="item">
+        <div class="item item-icon-left">
           <i class="icon ion-ios-location"></i>
           <span>{{service.address}}</span>
         </div>
-        <div class="item">
+        <div class="item item-icon-left" ng-if="cost">
           <i class="icon ion-social-euro"></i>
-          <span>{{service.cost ? service.cost : ('cost_free' | translate)}}</span>
+          <span>{{cost ? cost : ('cost_free' | translate)}}</span>
+        </div>
+        <div class="item item-icon-left" ng-if="!cost && serviceType.subtypes" ng-repeat="subtype in serviceType.subtypes">
+          <i class="icon ion-social-euro"></i>
+          <span>{{subtype.name}}</span>: <span class="cost">{{subtype.cost ? subtype.cost : ('cost_free' | translate)}}</span>
         </div>
       </div>
       <div class="row">
