--- a/gi-pro-mobile/www/css/ionic.app.css
+++ b/gi-pro-mobile/www/css/ionic.app.css
@@ -10184,8 +10184,11 @@ input[readonly] {
   border-color: transparent; }
   .service-details .contacts .item .icon,
   .service-details .details .item .icon {
-    font-size: 20px;
-    margin-right: 10px; }
+    /*font-size: 20px;
+        margin-right: 10px;*/ }
+  .service-details .contacts .item span,
+  .service-details .details .item span {
+    white-space: normal; }
   .service-details .contacts .item .cost,
   .service-details .details .item .cost {
     font-weight: bold; }
