--- a/gi-pro-mobile/www/templates/include_professional.html
+++ b/gi-pro-mobile/www/templates/include_professional.html
@@ -18,6 +18,13 @@
     </div>
   </div>
   <div class="contacts" ng-class="{'editing': editingProfile}">
+    <!-- Address -->
+    <div class="item item-icon-left" ng-class="{'item-input': editingProfile}">
+      <i class="icon ion-ios-location"></i>
+      <div ng-if="!editingProfile">{{edit.address}}</div>
+      <placeautocomplete ng-if="editingProfile" ng-model="edit.address" attr-placeholder="{{'address_placeholder' | translate}}" click-activation="false" data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}" on-select="selectAddress"></placeautocomplete>
+      <button ng-if="editingProfile" class="button button-clear button-stable button-icon icon ion-close-circled" ng-click="edit.address = ''"></button>
+    </div>
     <!-- Phones -->
     <div class="list">
       <div class="item item-icon-left" ng-class="{'item-input': editingProfile}" ng-repeat="phone in edit.phone">
