--- a/gi-pro-mobile/www/templates/registration_step_2.html
+++ b/gi-pro-mobile/www/templates/registration_step_2.html
@@ -14,41 +14,47 @@
     <div class="form-container">
       <form name="regform1">
         <div class="list list-inset">
-          <label class="item item-input">
+          <div class="item item-input">
             <input type="text" ng-model="registration.name" placeholder="{{'name_placeholder' | translate}}" ng-required="true">
-          </label>
-          <label class="item item-input">
+          </div>
+          <div class="item item-input">
             <input type="text" ng-model="registration.surname" placeholder="{{'surname_placeholder' | translate}}" ng-required="true">
-          </label>
-          <label class="item item-input">
+          </div>
+          <!--
+          <div class="item item-input">
             <input type="text" ng-model="registration.address" placeholder="{{'address_placeholder' | translate}}" ng-required="true">
-          </label>
-          <label class="item item-input item-select">
+          </div>
+          -->
+          <div class="item item-input item-input-right">
+            <placeautocomplete ng-model="registration.address" attr-placeholder="{{'address_placeholder' | translate}}" click-activation="false" data="places" on-type="typePlace" placeholder="{{'service_address_placeholder' | translate}}" on-select="selectAddress"></placeautocomplete>
+            <i class="icon ion-map plan-viaggia-fromto" ng-click="openMapPlan('from')"></i>
+          </div>
+          <div class="item item-input item-select">
             <div class="input-label" ng-class="{'placeholder': !selectedProfession}">
               {{selectedProfession ? selectedProfession.name : ('profession_placeholder' | translate)}}
             </div>
             <select ng-model="selectedProfession" ng-required="true" ng-click="openSelectProfessionPopup()">
             </select>
-          </label>
-          <label class="item item-input item-select">
+          </div>
+          <div class="item item-input item-select">
             <div class="input-label" ng-class="{'placeholder': !selectedArea}">
               {{selectedArea ? selectedArea.name : ('area_placeholder' | translate)}}
             </div>
             <select ng-model="selectedArea" ng-required="true" ng-click="openSelectAreaPopup()">
             </select>
-          </label>
-          <div class="cf_piva">
-            <label class="item item-input item-input-uppercase">
-              <input type="text" ng-model="registration.cf" placeholder="{{'cf_placeholder' | translate}}" ng-required="!registration.piva">
-            </label>
-            <p>{{'register_or' | translate}}</p>
-            <label class="item item-input item-input-uppercase">
-              <input type="text" ng-model="registration.piva" placeholder="{{'piva_placeholder' | translate}}" ng-required="!registration.cf">
-            </label>
           </div>
-          <label class="item item-input">
+          <div class="cf_piva">
+            <div class="item item-input item-input-uppercase">
+              <input type="text" ng-model="registration.cf" placeholder="{{'cf_placeholder' | translate}}" ng-required="!registration.piva">
+            </div>
+            <p>{{'register_or' | translate}}</p>
+            <div class="item item-input item-input-uppercase">
+              <input type="text" ng-model="registration.piva" placeholder="{{'piva_placeholder' | translate}}" ng-required="!registration.cf">
+            </div>
+          </div>
+          <div class="item item-input">
             <input type="text" ng-model="registration.albo" ng-required="true" placeholder="{{'albo_placeholder' | translate}}">
-          </label>
+          </div>
           <ion-checkbox class="checkbox-assertive" ng-model="registration.declaration" ng-required="true">{{'register_declaration' | translate}}</ion-checkbox>
         </div>
         <!--<button class="button button-block button-assertive" ng-click="register()" ng-disabled="!registration.privacy">{{'register' | translate}}</button>-->
