--- a/gi-pro-mobile/www/templates/serviceAndProf.html
+++ b/gi-pro-mobile/www/templates/serviceAndProf.html
@@ -64,7 +64,7 @@
           <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
               <leaflet event-broadcast="events" center="center" markers="servicesMarkers" ng-style="styles.container" ng-init="initServicesTab()"
-                id="serviceMap"></leaflet>
+                id="servicesMap"></leaflet>
             </div>
           </div>
         </ion-content>
@@ -112,7 +112,7 @@
           <div class="map-visualization" ng-if="!viewAsList">
             <div id="modal-map-container" data-tap-disabled="true">
               <leaflet event-broadcast="events" center="center" markers="professionalMarkers" ng-style="styles.container" ng-init="initProfessionalsTab()"
-                id="professionMap"></leaflet>
+                id="professionalsMap"></leaflet>
             </div>
           </div>
         </ion-content>
